--- a/src/prototype2/fase2a_training.ipynb
+++ b/src/prototype2/fase2a_training.ipynb
@@ -39,8 +39,7 @@
     "* **BratReader**: Permite crear la estructura de objetos a partir de un repositorio de ficheros anotados en Brat. Disponible en GitHub con licencia GPL.\n",
     "* **Spacy**: Permite realizar procesamiento de lenguaje natural en Python, incluyendo reconocimiento de entidades nombradas.\n",
     "* **Scikit-Learn**: Librería de machine learning que se ha utilizado para construir la matriz de confusión de las entidades nombradas detectadas por Spacy. \n",
-    "* **Matplotlib**: Se ha utilizado para representar gráficamente la matriz de confusión.\n",
-    "* faltan mas .............."
+    "* **Matplotlib**: Se ha utilizado para representar gráficamente la matriz de confusión.\n"
    ]
   },
   {
