--- a/src/prototype2/fase2b_evaluation.ipynb
+++ b/src/prototype2/fase2b_evaluation.ipynb
@@ -39,8 +39,7 @@
     "* **BratReader**: Permite crear la estructura de objetos a partir de un repositorio de ficheros anotados en Brat. Disponible en GitHub con licencia GPL.\n",
     "* **Spacy**: Permite realizar procesamiento de lenguaje natural en Python, incluyendo reconocimiento de entidades nombradas.\n",
     "* **Scikit-Learn**: Librería de machine learning que se ha utilizado para construir la matriz de confusión de las entidades nombradas detectadas por Spacy. \n",
-    "* **Matplotlib**: Se ha utilizado para representar gráficamente la matriz de confusión.\n",
-    "* faltan mas .............."
+    "* **Matplotlib**: Se ha utilizado para representar gráficamente la matriz de confusión.\n"
    ]
   },
   {
@@ -265,47 +264,6 @@
     "plt.title('Score per metric')\n",
     "plt.savefig(tfm_dir + '/img/score_metrics_' + model_name + '.png')\n",
     "#plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Problemas:\n",
-    "\n",
-    "* Se ha duplicado el nº de falsos positivos de LOC -> Quitar minúsculas del CSV (palabras demasiado comunes que coinciden con localizaciones.\n",
-    "\n",
-    "* Ha bajado el recall (aumento de los falsos negativos para ORG y PER) -> analizar algunos resultados del Matching para ver qué entidades no están en el CSV.\n",
-    "\n",
-    "* Muchas organizaciones/personas se confunden con localizaciones -> Analizar las localizaciones más frecuentes en Camel/Mayus detectadas por el Matching.\n",
-    "\n",
-    "* Saltos de línea se consideran entidades de tipo ORG !!!!!!! OJO con esto!!\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Conclusiones\n",
-    "..."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Estructura de directorios\n",
-    ".."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Referencias\n",
-    "\n",
-    "* Lista de 269K ciudades del mundo: https://docs.google.com/spreadsheets/d/1x-t5GdfxbeuO5GtfnX4BYbTC6XBRI8HgxUfHIclR8bw/edit#gid=674937053\n",
-    "* Lista de 42K organizaciones y 620K nombres de persona: https://ec.europa.eu/jrc/en/language-technologies/jrc-names"
    ]
   }
  ],
